@@ -1,45 +1,56 @@
 package pl.alex.cars.api.brand.service;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import pl.alex.cars.api.brand.dto.BrandRequest;
 import pl.alex.cars.api.brand.dto.BrandResponse;
 import pl.alex.cars.api.brand.entity.Brand;
+import pl.alex.cars.api.brand.exception.BrandNotFoundException;
 import pl.alex.cars.api.brand.repository.BrandRepository;
-import pl.alex.cars.api.model.entity.Model;
+import pl.alex.cars.api.model.dto.ModelResponse;
 
 @Service
+@RequiredArgsConstructor
 public class BrandService {
 
-	private final BrandRepository brandRepository;
+  private final BrandRepository brandRepository;
 
-	public BrandService(BrandRepository brandRepository) {
-		this.brandRepository = brandRepository;
-	}
+  public List<BrandResponse> findAllBrands() {
+    return brandRepository.findAll()
+        .stream()
+        .map(brand -> BrandResponse.of(brand.getId(), brand.getName(),
+            brand.getModels().stream()
+                .filter(Objects::nonNull)
+                .map(model -> new ModelResponse(model.getId(), model.getName()))
+                .collect(Collectors.toList())))
+        .collect(Collectors.toList());
+  }
 
-	public List<String> findAllBrands() {
-		return brandRepository.findAll().stream()
-				.map(Brand::getName)
-				.collect(Collectors.toList());
-	}
+  public BrandResponse getBrandResponseByName(String name, boolean includeModels) {
+    Brand brand = brandRepository.findByNameEquals(name)
+        .orElseThrow(() -> new BrandNotFoundException("Brand with name [" + name + "] Not found."));
 
-	// TODO: create custom exception
-	public BrandResponse getBrandResponseByName(String name) {
-		Brand brand = brandRepository.findByNameEquals(name)
-				.orElseThrow(() -> new IllegalArgumentException("Brand with name [" + name + "] Not found."));
-		List<String> brandModels = brand.getModels()
-				.stream()
-				.map(Model::getName)
-				.toList();
-		return BrandResponse.of(brand.getName(), brandModels);
-	}
+    List<ModelResponse> brandModels = includeModels ?
+        brand.getModels().stream()
+            .filter(Objects::nonNull)
+            .map(model -> new ModelResponse(model.getId(), model.getName()))
+            .collect(Collectors.toList()) :
+        List.of();
 
-	public List<String> getMultipleBrands(BrandRequest brandRequest) {
-		List<Brand> brands = brandRepository.findBrandByNameIn(brandRequest.getNames());
-		return brands.stream()
-				.map(Brand::getName)
-				.collect(Collectors.toList());
-	}
+    return BrandResponse.of(brand.getId(), brand.getName(), brandModels);
+  }
 
+  public List<BrandResponse> getMultipleBrands(BrandRequest brandRequest) {
+    List<Brand> brands = brandRepository.findBrandByNameIn(brandRequest.getNames());
+    return brands.stream()
+        .map(brand -> BrandResponse.of(brand.getId(), brand.getName(), brand.getModels()
+            .stream()
+            .filter(Objects::nonNull)
+            .map(model -> new ModelResponse(model.getId(), model.getName()))
+            .collect(Collectors.toList())))
+        .collect(Collectors.toList());
+  }
 }
